kubernetes/main/apps/kube-system/cilium/policies/home.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-deny-ingress-home
  namespace: home
spec:
  endpointSelector: {}
  ingress:
    - fromEntities:
        - cluster
        - health
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-traefik-to-apps-home
  namespace: home
spec:
  endpointSelector:
    matchExpressions:
      - key: app.kubernetes.io/name
        operator: In
        values:
          - grocy
          - homepage
          - immich-server
          - linkding
          - miniflux
          - owncast
          - syncthing
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: traefik
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
            - port: "3000"
              protocol: TCP
            #- port: "3001"
            #  protocol: TCP
            - port: "9090"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-homepage-home
  namespace: home
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: homepage
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEntities:
        - kube-apiserver
    - toEntities:
        - cluster
---
#apiVersion: cilium.io/v2
#kind: CiliumNetworkPolicy
#metadata:
#  name: allow-immich
#  namespace: home
#spec:
#  endpointSelector:
#    matchLabels:
#      app.kubernetes.io/name: immich-server
#  egress:
#    - toEndpoints:
#        - matchLabels:
#            io.kubernetes.pod.namespace: kube-system
#            k8s-app: kube-dns
#      toPorts:
#        - ports:
#            - port: "53"
#              protocol: UDP
#            - port: "53"
#              protocol: TCP
#    - toEndpoints:
#        - matchLabels:
#            cnpg.io/cluster: postgres-1
#      toPorts:
#        - ports:
#            - port: "5432"
#              protocol: TCP
#    - toEndpoints:
#        - matchLabels:
#            app.kubernetes.io/name: dragonfly
#      toPorts:
#        - ports:
#            - port: "6379"
#              protocol: TCP
---
#apiVersion: cilium.io/v2
#kind: CiliumNetworkPolicy
#metadata:
#  name: allow-immich-machine-learning
#  namespace: home
#spec:
#  endpointSelector:
#    matchLabels:
#      app.kubernetes.io/name: immich-machine-learning
#  egress:
#    - toEndpoints:
#        - matchLabels:
#            io.kubernetes.pod.namespace: kube-system
#            k8s-app: kube-dns
#      toPorts:
#        - ports:
#            - port: "53"
#              protocol: UDP
#            - port: "53"
#              protocol: TCP
#    - toFQDNs:
#        - matchName: huggingface.co
#        - matchPattern: "*.huggingface.co"
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-miniflux-home
  namespace: home
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: miniflux
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            cnpg.io/cluster: postgres-1
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - toEntities:
        - world
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-linkding-home
  namespace: home
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: linkding
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEntities:
        - world
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-owncast-home
  namespace: home
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: owncast
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEntities:
        - world
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-syncthing-home
  namespace: home
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: syncthing
  ingress:
    - fromEntities:
        - world
      toPorts:
        - ports:
            - port: "8384"
              protocol: TCP
            - port: "22000"
              protocol: TCP
            - port: "22000"
              protocol: UDP
            - port: "21027"
              protocol: UDP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEntities:
        - world
