kubernetes/main/apps/kube-system/cilium/policies/labs.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-deny-ingress-labs
  namespace: labs
spec:
  endpointSelector: {}
  ingress:
    - fromEntities:
        - cluster
        - health
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-traefik-to-atuin
  namespace: labs
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: atuin
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: traefik
      toPorts:
        - ports:
            - port: "8888"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-atuin
  namespace: labs
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: atuin
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            cnpg.io/cluster: postgres-1
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
