kubernetes/main/apps/kube-system/cilium/policies/networking.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-deny-ingress-networking
  namespace: networking
spec:
  endpointSelector: {}
  ingress:
    - fromEntities:
        - cluster
        - health
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-traefik-networking
  namespace: networking
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: traefik
  ingress:
    - fromEntities:
        - world
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
            - port: "8443"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEntities:
        - cluster
    - toEntities:
        - kube-apiserver
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-cloudflare-ddns
  namespace: networking
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: cloudflare-ddns
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toFQDNs:
        - matchName: api.cloudflare.com
        - matchName: api.ipify.org
        - matchName: ifconfig.me
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-smtp-relay
  namespace: networking
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: smtp-relay
  ingress:
    - fromEntities:
        - cluster
      toPorts:
        - ports:
            - port: "25"
              protocol: TCP
            - port: "587"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toFQDNs:
        - matchPattern: "*.smtp.com"
        - matchPattern: "smtp.*"
        - matchName: smtp.gmail.com
        - matchName: smtp.sendgrid.net
      toPorts:
        - ports:
            - port: "587"
              protocol: TCP
            - port: "465"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-netshoot
  namespace: networking
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: netshoot
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEntities:
        - world
    - icmps:
        - fields:
            - type: 8
              family: IPv4
            - type: 128
              family: IPv6
      toEntities:
        - world
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cloudflared
  namespace: networking
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: cloudflared
  ingress:
    - fromEntities:
        - cluster
      toPorts:
        - ports:
            - port: "2000"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: traefik-external
            io.kubernetes.pod.namespace: networking
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
            - port: "8443"
              protocol: TCP
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
    - toFQDNs:
        - matchPattern: "*.cloudflare.com"
        - matchPattern: "*.argotunnel.com"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "7844"
              protocol: UDP
