kubernetes/main/apps/kube-system/cilium/policies/sec-tools.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: sec-tools
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: sec-tools
  ingress: []
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEntities:
        - world
    - icmps:
        - fields:
            - type: 8
              family: IPv4
            - type: 128
              family: IPv6
      toEntities:
        - world
