kubernetes/main/apps/kube-system/cilium/policies/system.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-deny-ingress-system
  namespace: system
spec:
  endpointSelector: {}
  ingress:
    - fromEntities:
        - cluster
        - health
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-reloader
  namespace: system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: reloader
  egress:
    - toEntities:
        - kube-apiserver
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-descheduler
  namespace: system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: descheduler
  egress:
    - toEntities:
        - kube-apiserver
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-spegel
  namespace: system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: spegel
  ingress:
    - fromEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "5000"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEntities:
        - kube-apiserver
    - toEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "5000"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-volsync
  namespace: system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: volsync
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEntities:
        - kube-apiserver
    - toEntities:
        - world
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-generic-device-plugin
  namespace: system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: generic-device-plugin
  egress:
    - toEntities:
        - host
